<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/Widget.Sequence.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:liftOnScroll="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/navigation_section_stops" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/navigation_section_trips" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/navigation_section_info" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/navigation_section_network" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/contextual_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.0"
                android:paddingLeft="4dp"
                android:paddingRight="8dp"
                android:visibility="invisible"
                app:navigationIcon="@drawable/ic_close_24dp"
                tools:alpha="1.0"
                tools:ignore="RtlHardcoded"
                tools:visibility="visible" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:theme="@style/ThemeOverlay.Sequence.Dark"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/backdrop_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_container"
        android:name="de.julianostarek.flow.ui.main.map.SlideInMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" />

    <de.julianostarek.flow.ui.common.view.base.ContentLayerOutsideTouchShield
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </de.julianostarek.flow.ui.common.view.base.ContentLayerOutsideTouchShield>

</androidx.coordinatorlayout.widget.CoordinatorLayout>